syntax = "proto3";
import "google/protobuf/empty.proto";

package notes;

service NotesService {
}

message ExampleRequest {
}

message ExampleResponse {
}
